Update Google Colab file

--- a/DAINVulkanCLI-Colab.ipynb
+++ b/DAINVulkanCLI-Colab.ipynb
@@ -19,8 +19,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "F78H7JkR5c49",
-        "colab_type": "text"
+        "id": "F78H7JkR5c49"
       },
       "source": [
         "# DAIN-Vulkan-GUI Colab\n",
@@ -30,23 +29,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "O0fPt2JG4014",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# Check GPU\n",
-        "!nvidia-smi"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-OapminG4kJV",
-        "colab_type": "code",
-        "colab": {}
+        "id": "-OapminG4kJV"
       },
       "source": [
         "# Connect Google Drive\n",
@@ -60,13 +43,23 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "U94yuBubvpZo",
-        "colab_type": "code",
-        "colab": {}
+        "id": "O0fPt2JG4014"
+      },
+      "source": [
+        "# Check GPU\n",
+        "!nvidia-smi"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U94yuBubvpZo"
       },
       "source": [
         "# Install Vulkan libraries\n",
-        "!apt install -y libvulkan-dev"
+        "!apt install -y libvulkan1"
       ],
       "execution_count": null,
       "outputs": []
@@ -74,42 +67,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8tIjl0gKxpBL",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# Install a newer python version\n",
-        "!add-apt-repository -y ppa:deadsnakes/ppa\n",
-        "!apt install -y python3.8"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "vO1gsiIQArBW",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# Test python version\n",
-        "!python3.8 --version"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TUU4As0Mv9TK",
-        "colab_type": "code",
-        "colab": {}
+        "id": "TUU4As0Mv9TK"
       },
       "source": [
         "# Download DAIN-Vulkan-GUI\n",
-        "%cd /content/\n",
         "!git clone https://github.com/Mar2ck/DAIN-Vulkan-GUI"
       ],
       "execution_count": null,
@@ -118,14 +79,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y7CJ2apU44Vc",
-        "colab_type": "code",
-        "colab": {}
+        "id": "heZk2eVricsn"
+      },
+      "source": [
+        "# Download dependencies\n",
+        "!wget \"https://github.com/Mar2ck/DAIN-Vulkan-GUI/releases/download/0.0.2/dependencies-linux.tar.xz\"\n",
+        "!tar -xvf dependencies-linux.tar.xz -C ./DAIN-Vulkan-GUI/src/\n",
+        "!python3 -m pip install -r /content/DAIN-Vulkan-GUI/requirements.txt\n",
+        "!python3 -m pip install -r /content/DAIN-Vulkan-GUI/requirements-optional.txt"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YV2Pz_VLlYw2"
+      },
+      "source": [
+        "# Check help page\n",
+        "!python3 /content/DAIN-Vulkan-GUI/src/DAINVulkanCLI.py --help"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Y7CJ2apU44Vc"
       },
       "source": [
         "# Run DAINVulkanCLI\n",
-        "%cd /content/DAIN-Vulkan-GUI/src/\n",
-        "!python3.8 DAINVulkanCLI.py -i \"/content/drive/My Drive/Videos/input.mp4\" -O \"/content/\" -t 2048 --interpolator \"cain-ncnn\""
+        "!python3 /content/DAIN-Vulkan-GUI/src/DAINVulkanCLI.py -i \"/content/drive/My Drive/Videos/example.mp4\" -O \"/content/\" -t 2048 --interpolator \"cain-ncnn\""
       ],
       "execution_count": null,
       "outputs": []
